--- a/pom.xml
+++ b/pom.xml
@@ -115,16 +115,34 @@
 
     <artifactId>vonce-validator</artifactId>
     <groupId>cn.vonce</groupId>
-    <version>0.9.1</version>
+    <version>0.9.2</version>
 
     <!-- 版本信息 -->
     <properties>
+        <log4j.version>1.2.17</log4j.version>
+        <slf4j.version>1.7.8</slf4j.version>
         <servlet-api.version>4.0.0</servlet-api.version>
         <spring.version>4.1.2.RELEASE</spring.version>
-        <vonce.common.version>1.0.3</vonce.common.version>
+        <commons.lang.version>2.6</commons.lang.version>
+        <vonce.common.version>1.0.4</vonce.common.version>
     </properties>
 
     <dependencies>
+        <!-- logger -->
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>${log4j.version}</version>
+            <scope>compile</scope>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
+            <scope>compile</scope>
+            <optional>true</optional>
+        </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
@@ -135,11 +153,22 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
             <version>${spring.version}</version>
+            <scope>compile</scope>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-aop</artifactId>
             <version>${spring.version}</version>
+            <scope>compile</scope>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>${commons.lang.version}</version>
+            <scope>compile</scope>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>cn.vonce</groupId>
